<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.WorkTicketActivity"
    android:scrollbars="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <!-- CLIENT NAME -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_client_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_client_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- ADDRESS -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_address"
                    android:layout_width="0dp"
                    android:layout_weight="0.8"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_address">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences" />

                </com.google.android.material.textfield.TextInputLayout>

                <!-- BTN GET DIRECTIONS -->
                <ImageButton
                    android:id="@+id/btn_get_directions"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:layout_marginLeft="8dp"
                    android:src="@drawable/ic_directions" />

            </LinearLayout>

            <!-- SCHEDULE DATE -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_schedule_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/hint_schedule_date">

                <com.google.android.material.textfield.TextInputEditText
                    android:editable="false"
                    android:focusableInTouchMode="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- PHONE -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/hint_phone">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- REASON FOR CALL -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_reason_for_call"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/hint_reason_for_call">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="3"
                    android:inputType="textMultiLine|textCapSentences" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- EMPTY BUTTONS REQUIRED -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="16dp">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/overview" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="8dp"
                    android:text="@string/purchasing" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="8dp"
                    android:text="@string/finishing_up" />

            </LinearLayout>

        </LinearLayout>

        <!-- LOADING INDICATOR -->
        <include
            android:id="@+id/loading_indicator"
            layout="@layout/loading_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

    </FrameLayout>

</ScrollView>